--- a/thesis/CIBSAE.tex
+++ b/thesis/CIBSAE.tex
@@ -58,7 +58,7 @@
   keywordstyle=\bf\ttfamily\color[rgb]{0,.3,.7},
   commentstyle=\color[rgb]{0.133,0.545,0.133},
   stringstyle={\color[rgb]{0.75,0.49,0.07}},
-  morekeywords={Applicative, State, Store, Task, Tasks, Build},
+  morekeywords={Applicative, Selective, State, Store, Task, Tasks, Build},
   upquote=true,
   breaklines=true,
   breakatwhitespace=true,
