--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -150,3 +150,15 @@
     year = {2019},
     note = {\url{https://web.archive.org/web/20191021224324/https://github.com/arrow-kt/arrow/blob/paco-tsalc/modules/docs/arrow-examples/src/test/kotlin/arrow/BuildSystemsALaCarte.kt}}
 }
+
+@article{mokhov2019selective,
+  title={Selective applicative functors},
+  author={Mokhov, Andrey and Lukyanov, Georgy and Marlow, Simon and Dimino, Jeremie},
+  journal={Proceedings of the ACM on Programming Languages},
+  volume={3},
+  number={ICFP},
+  pages={1--29},
+  year={2019},
+  publisher={ACM New York, NY, USA}
+}
+
